Fix image's height
Looks weird in tablet view

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5222,7 +5222,6 @@ img.right {
 
 img.about {
     width: 22%;
-    height: 27%;
     max-width: 200px;
     max-height: 210px;
     min-width: 150px;
